--- a/testing.ipynb
+++ b/testing.ipynb
@@ -18,6 +18,15 @@
     "n.form_network()\n",
     "n.train_network(1000, 0.1)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n.evaluate([4.8,3.4,1.9,0.2])\n"
+   ]
   }
  ],
  "metadata": {
