--- a/spam.ipynb
+++ b/spam.ipynb
@@ -4,115 +4,517 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\gabop\\Desktop\\CI5438-Proyecto2-main\\network.py:129: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  error = [result[i] - h[i] for i in range(len(result))]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "27\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n",
-      "50\n",
-      "51\n",
-      "52\n",
-      "53\n",
-      "54\n",
-      "55\n",
-      "56\n",
-      "57\n",
-      "58\n",
-      "59\n",
-      "60\n",
-      "61\n",
-      "62\n",
-      "63\n",
-      "64\n",
-      "65\n",
-      "66\n",
-      "67\n",
-      "68\n",
-      "69\n",
-      "70\n",
-      "71\n",
-      "72\n",
-      "73\n",
-      "74\n",
-      "75\n",
-      "76\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from spam import *\n",
     "\n",
     "column_names = load_column_names(\"./spam/spambase.names\")\n",
-    "X, y = load_data(\"./spam/spambase.data\", column_names)\n",
+    "data = load_data(\"./spam/spambase.data\", column_names)\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split_data(X, y)\n",
+    "network1 = Network(data, data.columns[:-1], [data.columns[-1]], [114, 1])\n",
+    "network1.train_network(50, 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "network2 = Network(data, data.columns[:-1], [data.columns[-1]], [114, 1])\n",
+    "network2.train_network(75, 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "network3 = Network(data, data.columns[:-1], [data.columns[-1]], [114, 1])\n",
+    "network3.train_network(100, 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pred</th>\n",
+       "      <th>result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>916</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>917</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>918</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>919</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>920</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>921 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     pred  result\n",
+       "0     1.0     0.0\n",
+       "1     1.0     0.0\n",
+       "2     1.0     0.0\n",
+       "3     1.0     1.0\n",
+       "4     1.0     0.0\n",
+       "..    ...     ...\n",
+       "916   1.0     1.0\n",
+       "917   1.0     0.0\n",
+       "918   1.0     0.0\n",
+       "919   1.0     0.0\n",
+       "920   1.0     0.0\n",
+       "\n",
+       "[921 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "network1.test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pred</th>\n",
+       "      <th>result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>916</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>917</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>918</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>919</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>920</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>921 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     pred  result\n",
+       "0     1.0     0.0\n",
+       "1     1.0     0.0\n",
+       "2     1.0     0.0\n",
+       "3     1.0     1.0\n",
+       "4     1.0     0.0\n",
+       "..    ...     ...\n",
+       "916   1.0     1.0\n",
+       "917   1.0     0.0\n",
+       "918   1.0     0.0\n",
+       "919   1.0     0.0\n",
+       "920   1.0     0.0\n",
+       "\n",
+       "[921 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "network2.test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pred</th>\n",
+       "      <th>result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>916</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>917</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>918</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>919</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>920</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>921 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     pred  result\n",
+       "0     1.0     0.0\n",
+       "1     1.0     0.0\n",
+       "2     1.0     0.0\n",
+       "3     1.0     1.0\n",
+       "4     1.0     0.0\n",
+       "..    ...     ...\n",
+       "916   1.0     1.0\n",
+       "917   1.0     0.0\n",
+       "918   1.0     0.0\n",
+       "919   1.0     0.0\n",
+       "920   1.0     0.0\n",
+       "\n",
+       "[921 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "network3.test()\n",
+    "pd.to_numeric()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15,\n",
+       " 1.3322676295501878e-15]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "\n",
-    "network = Network(X_train.join(y_train), X_train.columns, pd.DataFrame(y_train).columns, [114, 57, 1])\n",
-    "network.train_network(500, 0.1)"
+    "# import matplotlib.pyplot as plt\n",
+    "\n",
+    "# plt.xlabel(\"Iteraciones\")\n",
+    "# plt.ylabel(\"Error\")\n",
+    "# plt.plot([i for i in range(1,51)], network1.error_medio, color='red')\n",
+    "# plt.plot([i for i in range(1,76)], network2.error_medio, color='blue')\n",
+    "# plt.plot([i for i in range(0,100)], network3.error_medio, color='green')\n",
+    "# plt.legend(loc=\"lower right\")\n",
+    "# plt.show()\n",
+    "\n",
+    "network3.error_maximo"
    ]
   }
  ],
@@ -132,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
