--- a/spam.ipynb
+++ b/spam.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,509 +12,54 @@
     "data = load_data(\"./spam/spambase.data\", column_names)\n",
     "\n",
     "network1 = Network(data, data.columns[:-1], [data.columns[-1]], [114, 1])\n",
-    "network1.train_network(50, 0.1)"
+    "network1.train_network(50, 0.01)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "network2 = Network(data, data.columns[:-1], [data.columns[-1]], [114, 1])\n",
-    "network2.train_network(75, 0.1)"
+    "network2.train_network(100, 0.01)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "network3 = Network(data, data.columns[:-1], [data.columns[-1]], [114, 1])\n",
-    "network3.train_network(100, 0.1)"
+    "network3.train_network(150, 0.01)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pred</th>\n",
-       "      <th>result</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>916</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>917</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>918</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>919</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>920</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>921 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     pred  result\n",
-       "0     1.0     0.0\n",
-       "1     1.0     0.0\n",
-       "2     1.0     0.0\n",
-       "3     1.0     1.0\n",
-       "4     1.0     0.0\n",
-       "..    ...     ...\n",
-       "916   1.0     1.0\n",
-       "917   1.0     0.0\n",
-       "918   1.0     0.0\n",
-       "919   1.0     0.0\n",
-       "920   1.0     0.0\n",
-       "\n",
-       "[921 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "network1.test()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pred</th>\n",
-       "      <th>result</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>916</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>917</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>918</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>919</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>920</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>921 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     pred  result\n",
-       "0     1.0     0.0\n",
-       "1     1.0     0.0\n",
-       "2     1.0     0.0\n",
-       "3     1.0     1.0\n",
-       "4     1.0     0.0\n",
-       "..    ...     ...\n",
-       "916   1.0     1.0\n",
-       "917   1.0     0.0\n",
-       "918   1.0     0.0\n",
-       "919   1.0     0.0\n",
-       "920   1.0     0.0\n",
-       "\n",
-       "[921 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "network2.test()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pred</th>\n",
-       "      <th>result</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>916</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>917</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>918</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>919</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>920</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>921 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     pred  result\n",
-       "0     1.0     0.0\n",
-       "1     1.0     0.0\n",
-       "2     1.0     0.0\n",
-       "3     1.0     1.0\n",
-       "4     1.0     0.0\n",
-       "..    ...     ...\n",
-       "916   1.0     1.0\n",
-       "917   1.0     0.0\n",
-       "918   1.0     0.0\n",
-       "919   1.0     0.0\n",
-       "920   1.0     0.0\n",
-       "\n",
-       "[921 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "network3.test()\n",
-    "pd.to_numeric()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15,\n",
-       " 1.3322676295501878e-15]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "# import matplotlib.pyplot as plt\n",
-    "\n",
-    "# plt.xlabel(\"Iteraciones\")\n",
-    "# plt.ylabel(\"Error\")\n",
-    "# plt.plot([i for i in range(1,51)], network1.error_medio, color='red')\n",
-    "# plt.plot([i for i in range(1,76)], network2.error_medio, color='blue')\n",
-    "# plt.plot([i for i in range(0,100)], network3.error_medio, color='green')\n",
-    "# plt.legend(loc=\"lower right\")\n",
-    "# plt.show()\n",
-    "\n",
-    "network3.error_maximo"
+    "network3.test()"
    ]
   }
  ],
